Criação das pastas img, src, conexão

--- a/sistema.html
+++ b/sistema.html
@@ -47,5 +47,20 @@
             <a class="nav-link text-dark" href="#"><i class="fa-solid fa-right-frombracket"></i> Sair do Sistema</a>
         </div>
     </nav>
+
+    <div id="content" class="container mt-5">
+        <div class="row mt-5">
+            <div class="co-12 mt-5">
+                <h4 class="text-center text-warning">
+                    Bem vindo ao sistema de gerenciamento de rifas
+                </h4>
+                <img src="img/ticket.png" alt="e-rifas" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
