Criação de tipoVendedo

--- a/sistema.html
+++ b/sistema.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Vendedor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-user-check"></i> Tipo Vendedor</a>
+                    <a class="nav-link" href="src/tipo/visao/list-tipo.html"><i class="fa-solid fa-user-check"></i> Tipo Vendedor</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Promoção</a>
@@ -61,6 +61,7 @@
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
