Correção de erros | criação do CRUD

--- a/src/tipo/visao/list-tipo.html
+++ b/src/tipo/visao/list-tipo.html
@@ -27,13 +27,6 @@
                                  </tr>
                              </thead>
                          </table>
-                         <tbody>
-                             <tr>
-                                 <td class="text-center">01</td>
-                                 <td class="text-center">Administrador</td>
-                                 <td class="text-center"></td>
-                             </tr>
-                         </tbody>
                      </div>
                  </div>
              </div>
@@ -64,3 +57,4 @@
 
 <script src="src/tipo/controle/novo-tipo.js"></script>
 <script src="src/tipo/controle/salvar-tipo.js"></script>
+<script src="src/tipo/controle/list-tipo.js"></script>
