--- a/sistema.html
+++ b/sistema.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="libs/fontawesome/css/all.css">
         <link rel="stylesheet" href="libs/sweetAlert/dist/sweetalert2.css">
+        <link rel="stylesheet" href="libs/DataTables/datatables.css">
     </head>
 
 <body>
@@ -63,6 +64,7 @@
     <script src="libs/sweetAlert/dist/sweetalert2.all.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="libs/DataTables/datatables.js"></script>
     <script src="js/menu.js"></script>
 </body>
 
