--- a/sistema.html
+++ b/sistema.html
@@ -37,16 +37,16 @@
                     <a class="nav-link" href="src/tipo/visao/list-tipo.html"><i class="fa-solid fa-user-check"></i> Tipo Vendedor</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-dollar-sign"></i> Promoção</a>
+                    <a class="nav-link" href="src/promocao/visao/list-promocao.html"><i class="fa-solid fa-dollar-sign"></i> Promoção</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><i class="fa-solid fa-award"></i> Prêmio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-clipboard-check"></i> Comprador</a>
+                    <a class="nav-link" href="src/comprador/visao/list-comprador.html"><i class="fa-solid fa-clipboard-check"></i> Comprador</a>
                 </li>
             </ul>
-            <a class="nav-link text-dark" href="#"><i class="fa-solid fa-right-frombracket"></i> Sair do Sistema</a>
+            <a class="nav-link text-dark" href="index.html"><i class="fa-solid fa-right-frombracket"></i> Sair do Sistema</a>
         </div>
     </nav>
 
