--- a/sistema.html
+++ b/sistema.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#"><i class="fa-solid fa-user"></i> Usuário</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa-solid fa-hand-holding-dollar"></i> Vendedor</a>
+                    <a class="nav-link" href="src/vendedor/visao/list-vendedor.html"><i class="fa-solid fa-hand-holding-dollar"></i> Vendedor</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="src/tipo/visao/list-tipo.html"><i class="fa-solid fa-user-check"></i> Tipo Vendedor</a>
