--- a/src/promocao/visao/form-promocao.html
+++ b/src/promocao/visao/form-promocao.html
@@ -1,19 +1,19 @@
 <form id="form-promocao">
     <div class="form-group">
-        <label>Titulo:</label>
-        <input type="text" name="TITULO" id="TITULO" class="form-control">
-        <label>Descrição:</label>
-        <input type="text" name="DESCRICAO" id="DESCRICAO" class="form-control">
-        <label>Data Inicio:</label>
-        <input type="date" name="DATAINICIO" id="DATAINICIO" class="form-control">
-        <label>Data Fim:</label>
-        <input type="date" name="DATAFIM" id="DATAFIM" class="form-control">
-        <label>Dia do sorteio:</label>
-        <input type="date" name="DIASORTEIO" id="DIASORTEIO" class="form-control">
-        <label>Arrecadação:</label>
-        <input type="number" name="ARRECADACAO" id="ARRECADACAO" class="form-control">
-        <label>Valor da Rifa:</label>
-        <input type="number" name="VALORRIFA" id="VALORRIFA" class="form-control">
+        <label> Titulo: </label>
+        <input type="text" name="TITULO" id="TITULO" class="form-control" required placeholder="Titulo ">
+        <label> Descrição: </label>
+        <input type="text" name="DESCRICAO" id="DESCRICAO" class="form-control" required placeholder=" Descrição ">
+        <label> Data Inicio: </label>
+        <input type="date" name="DATA_INICIO" id="DATA_INICIO" class="form-control" required placeholder="Data Inicio ">
+        <label> Data Fim: </label>
+        <input type="date" name="DATA_FIM" id="DATA_FIM" class="form-control" required placeholder=" Data Fim ">
+        <label> Data Sorteio: </label>
+        <input type="date" name="DATA_SORTEIO" id="DATA_SORTEIO" class="form-control" required placeholder="Data Sorteio ">
+        <label> Arrecadação: </label>
+        <input type="double" name="ARRECADACAO" id="ARRECADACAO" class="form-control" required placeholder=" Arrecadação ">
+        <label> Valor Rifa: </label>
+        <input type="double" name="VALOR_RIFA" id="VALOR_RIFA" class="form-control" required placeholder="Valor ">
     </div>
     <input type="hidden" name="ID" id="ID">
 </form>
