--- a/src/comprador/visao/form-comprador.html
+++ b/src/comprador/visao/form-comprador.html
@@ -1,11 +1,7 @@
-<form id="form-tipo">
-      <div class="form-group">
-          <label>Nome</label>
-          <input type="text" name="NOME" id="NOME" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Celular</label>
-        <input type="text" name="CELULAR" id="CELULAR" class="form-control">
-      </div>
-      <input type="hidden" name="ID" id="ID">
+<form id="form-comprador">
+    <div class="form-group">
+        <label>Nome:</label>
+        <input type="text" name="NOME" id="NOME" class="form-control">
+    </div>
+    <input type="hidden" name="ID" id="ID">
 </form>
