--- a/src/vendedor/visao/list-vendedor.html
+++ b/src/vendedor/visao/list-vendedor.html
@@ -1,45 +1,44 @@
-<div class="row t-5">
-    <div class="col"-12 mt-5>
-     <div class="card shadow mt-5">
-         <div class="card-header">
-             <div class="card-title">
-                 <div class="row">
-                     <div class="col-12 col-md-10">
-                         <h4 class="text-dark">
-                             Gerenciar Vendedores
-                         </h4>
-                     </div>
-                     <div class="col-12 col-md-2">
-                           <button class="btn btn-dark btn-block btn-novo">
-                               Adicionar
-                           </button>
-                      </div>
+<div class="row mt-5">
+    <div class="col-12 mt-5">
+        <div class="card shadow mt-5">
+            <div class="card-header">
+                <div class="card-title">
+                    <div class="row">
+                        <div class="col-12 col-md-10">
+                            <h4 class="text-dark">
+                                Gerenciar vendedores
+                            </h4>
+                        </div>
+                        <div class="col-12 col-md-2">
+                            <button class="btn btn-dark btn-block btn-new">
+                                Adicionar
+                            </button>
+                        </div>
                     </div>
-                 </div>
-                 <div class="card-body">
-                     <div class="table-responsive">
-                         <table class="table tbale-hover" id="table-vendedor">
-                             <thead class="thead-dark">
-                                 <tr>
-                                     <th scope="col" class="text-center">ID</th>
-                                     <th scope="col" class="text-center">NOME</th>
-                                     <th scope="col" class="text-center">AÇÕES</th>
-                                 </tr>
-                             </thead>
-                         </table>
-                     </div>
-                 </div>
-             </div>
-         </div>
-      </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="table-vendedor">
+                            <thead class="thead-dark">
+                              <tr>
+                                  <th scope="col" class="text-center">ID</th>
+                                  <th scope="col" class="text-center">NOME</th>
+                                  <th scope="col" class="text-center">AÇÕES</th>
+                              </tr>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
-<div id="modal-vendedor" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
+<div id="modal-vendedor" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal-vendedor-title" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="my-modal-title">Title</h5>
+                <h5 class="modal-title" id="modal-vendedor-title">Title</h5>
                 <button class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -48,16 +47,16 @@
                 <p>Content</p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" data-dismiss="modal" aria-label="Close"><i class="fa-solid fa-circle-xmark"></i> Fechar</button>
-                <button class="btn btn-primary btn-salvar"><i class="fa-solid fa-floppy-disk"></i> Salvar</button>
+                <button class="btn btn-secondary" data-dismiss="modal" aria-label="Close"><i class="fa-solid fa-circle-xmark"></i> Fechar </button>
+                <button class="btn btn-primary btn-save" data-operation="insert"><i class="fa-solid fa-floppy-disk"></i> Salvar </button>
             </div>
         </div>
     </div>
 </div>
 
-<script src="src/vendedor/controle/novo-vendedor.js"></script>
-<script src="src/vendedor/controle/salvar-vendedor.js"></script>
+<script src="src/vendedor/controle/save-vendedor.js"></script>
+<script src="src/vendedor/controle/new-vendedor.js"></script>
+<script src="src/vendedor/controle/view-vendedor.js"></script>
 <script src="src/vendedor/controle/list-vendedor.js"></script>
-<script src="src/vendedor/controle/visualizar-vendedor.js"></script>
-<script src="src/vendedor/controle/editar-vendedor.js"></script>
+<script src="src/vendedor/controle/edit-vendedor.js"></script>
 <script src="src/vendedor/controle/delete-vendedor.js"></script>
